--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
-p {background-color: red;}
+p,h2,h3 {
+    color: red;
+}
+
+h1 {
+    color: blue;
+}
+
+.lista1 {
+    color: rgb(240, 120, 140);
+}
